# GFX-ATOM

./: .gitignore  CHANGELOG.md  Cargo.toml  PHASE5.8.5-RESULTS.json  README.md  attention_backend_results.json  gfxATOM.code-workspace  live_model_test_results.json  test_chatterbox.py  test_gpu_greedy.py  test_hf_embeds.py  test_onnx.py  test_onnx_local.py  test_rep.py  test_sampling.py  test_softmax.py  test_tts_no_codec.py  test_vocab.py
.jules/: bolt.md
atom/: config.py  quant_spec.py
benchmarks/: bench_reasoning.py  bench_tool_parser.py
crates/: PREFERENCES.md
crates/rs_atom_entrypoints_parsing/: Cargo.toml  pyproject.toml
crates/rs_atom_entrypoints_parsing/src/: lib.rs
docs/: 2026-05-16-donor-feature-integration-sprint.md  2026-05-17-upstream-atom-integration-plan.md  AMD_ENGINE_SUPPORT_AUDIT.md  PHASE4_KV_LAYOUT_AUDIT.md  UNIFIED_CLI_INTERFACE_SPEC.md  model_support_guide.md  universal_kv_broker_integration.md
donors/: DONORS_INDEX.md
examples/: tiered_kv_cache_demo.py
inventory/: kv-dedupe-map.json
python/: engine_runtime_profile.py  kv_codec_adapters.py  kv_quant_contracts.py  sglang_backend_adapter.py  sglang_kv_compression.py
rs_codec/: pyproject.toml
rs_codec/rs_codec/: Cargo.toml
rs_codec/rs_codec/src/: lib.rs
rust_bindings/: Cargo.toml
scripts/: sync_all_rust_crates.sh
tests/: conftest.py  phase5_8_5_live_benchmarks.py  phase6_1_hybrid_quality.py  test_audio_codec.py  test_chatterbox_vllm_backend.py  test_engine_runtime_profile_schema.py  test_phase5_8_rotorquant_integration.py  test_phase6_2_tiered_kv_cache.py  (+10 more)
(+140 files in other folders)
