[package]
name = "rs_atom_entrypoints_parsing"
version = "0.1.0"
edition = "2021"

[lib]
name = "atom_rust"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.20", features = ["extension-module"] }
regex = "1.10"
once_cell = "1.19"
uuid = { version = "1.7", features = ["v4", "fast-rng"] }
