[package]
name = "rs_codec"
version = "0.2.0"
edition = "2021"
description = "High-performance audio codec and DSP kernels with PyO3 bindings"

[lib]
name = "rs_codec"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.23.4", features = ["extension-module"] }
numpy = "0.23"
bytemuck = "1.20"
rayon = "1.8"
base64 = "0.22"
blake2 = "0.10"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
