[package]
name = "rs_codec"
version = "0.1.0"
edition = "2021"

[lib]
name = "rs_codec"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.28.3", features = ["extension-module"] }
numpy = "0.28"
bytemuck = "1.20"
rayon = "1.8"
base64 = "0.22"
blake2 = "0.10"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
